--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,11 +116,8 @@ section {
   margin-bottom: 15px;
 }
 
-.intro {
-  text-align: center;
-}
-
 .intro p {
+  text-align: center;
   line-height: 1.7;
   color: #39a6b2;
   width: 80%;
@@ -129,17 +126,17 @@ section {
 }
 
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
 .section-title {
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
   border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -175,7 +172,6 @@ section {
 }
 
 .trainers {
-  text-align: center;
 }
 
 .trainer {
@@ -221,9 +217,12 @@ section {
   text-align: right;
 }
 
+.flex-row {
+  display: flex;
+}
+
 /* REACH OUT STYLES START */
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
